<resources>
    <string name="app_name">LetStego</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="decode">Decode</string>
    <string name="secret_message">Secret message</string>
    <string name="encode">Encode</string>
    <string name="secret_key">Secret key</string>
    <string name="embed_text">Embed text</string>
    <string name="title">Title</string>
    <string name="ok">OK</string>

    <string name="static_image">static_image</string>
    <string name="extract_text">Extract Text</string>
    <string name="select_image">Select image</string>
    <string name="choose_import_method">Please choose a method to import an image</string>
    <string name="home">Home</string>
    <string name="no_message_found">No message found</string>
    <string name="decoded">Decoded:</string>
    <string name="wrong_key">Wrong secret key</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="search_for_contact">Search for contact by user name</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="welcome_to_letstego">Welcome to LetStego!</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="display_name">Display Name</string>
    <string name="register">Register</string>
    <string name="tap_anywhere_to_load_picture">Tap anywhere to load picture</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_contact">Delete contact</string>
    <string name="are_you_sure_delete_contact">Are you sure you want to delete this contact?</string>
    <string name="tap_to_add_profile_picture">Tap to add profile picture</string>
    <string name="signout">Sign Out</string>
    <string name="update">Update</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="profile">Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="are_you_sure_delete_profile">Are you sure you want to delete your profile?</string>
    <string name="chats">Chats</string>
    <string name="loading">Loading...</string>
    <string name="no_contacts">No contacts</string>
    <string name="no_messages">No messages</string>
    <string name="say_hi">Say Hi!</string>
    <string name="write">Write...</string>
</resources>
