<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.chat.DecodeFragment">

    <com.ortiz.touchview.TouchImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/originalImageView"
            android:src="@drawable/ic_add"
            android:background="@android:color/background_dark"
            android:scaleType="centerInside"/>

    <EditText
            android:id="@+id/inputTextToHide"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/round_corners"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/secret_message"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/inputSecretKey"/>

    <EditText
            android:id="@+id/inputSecretKey"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/round_corners"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/secret_key"
            app:layout_constraintHorizontal_bias="0.492"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonEncode"/>

    <Button
            android:id="@+id/buttonEncode"
            android:text="@string/encode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:text="@string/tap_anywhere_to_load_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hintTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/originalImageView"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.39"
            android:textColor="@color/colorPrimaryText"/>

</androidx.constraintlayout.widget.ConstraintLayout>