<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.hunorszondi.letstego.customViews.NavigationHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/navigationHeader"/>

    <ScrollView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:isScrollContainer="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navigationHeader"
            android:layout_marginTop="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    tools:text="username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/usernameTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="24sp"/>


            <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/displayNameInput"
                    android:background="@drawable/round_corners"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:hint="@string/display_name"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/changeProfilePictureButton"
                    android:layout_marginStart="64dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="64dp"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/emailInput"
                    android:background="@drawable/round_corners"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:hint="@string/email"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/displayNameInput"
                    app:layout_constraintStart_toStartOf="@+id/displayNameInput"
                    app:layout_constraintEnd_toEndOf="@+id/displayNameInput"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordInput"
                    android:background="@drawable/round_corners"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:hint="@string/password"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/emailInput"
                    app:layout_constraintStart_toStartOf="@+id/emailInput"
                    app:layout_constraintEnd_toEndOf="@+id/emailInput"/>

            <androidx.cardview.widget.CardView
                    android:id="@+id/profilePictureCardView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
                    android:layout_marginTop="24dp">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:src="@tools:sample/avatars"
                        android:scaleType="centerCrop"
                        android:id="@+id/profilePicture"/>

            </androidx.cardview.widget.CardView>

            <Button
                    android:text="@string/update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/updateButton"
                    android:background="@drawable/buttonshape"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/passwordInput"
                    app:layout_constraintEnd_toEndOf="@+id/passwordInput"
                    app:layout_constraintStart_toStartOf="@+id/passwordInput"/>

            <Button
                    android:text="@string/change_profile_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/changeProfilePictureButton"
                    android:background="@drawable/round_corners"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/profilePictureCardView"
                    app:layout_constraintStart_toStartOf="@+id/profilePictureCardView"
                    app:layout_constraintEnd_toEndOf="@+id/profilePictureCardView"/>

            <Button
                    android:text="@string/signout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/signOutButton"
                    android:textAlignment="viewStart"
                    android:background="@drawable/menuitemhsape"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/updateButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>

            <Button
                    android:text="@string/delete_profile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/deleteProfileButton"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/holo_red_dark"
                    android:background="@drawable/menuitemhsape"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintTop_toBottomOf="@+id/view"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@+id/signOutButton"
                    app:layout_constraintStart_toStartOf="@+id/signOutButton"
                    app:layout_constraintEnd_toEndOf="@+id/signOutButton"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/view"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
