<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@android:color/white"
        android:isScrollContainer="false">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:src="@mipmap/ic_launcher"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imageViewRightBubble"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/textView"/>

        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:text="@string/welcome_to_letstego"
                android:textSize="@dimen/splash_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.39"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/usernameInput"
                android:background="@drawable/round_corners"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/user_name"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginStart="64dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="64dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordInput"
                android:background="@drawable/round_corners"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/password"
                android:layout_marginStart="64dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="64dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/usernameInput"/>

        <Button
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginButton"
                android:background="@drawable/buttonshape"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/passwordInput"
                app:layout_constraintEnd_toEndOf="@+id/passwordInput"
                app:layout_constraintStart_toStartOf="@+id/passwordInput"/>

        <Button
                android:text="or Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registerLink"
                android:layout_marginTop="32dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/round_corners"
                app:layout_constraintTop_toBottomOf="@+id/loginButton"
                app:layout_constraintStart_toStartOf="@+id/loginButton"
                app:layout_constraintEnd_toEndOf="@+id/loginButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

